package com.Hackathon.src.exceptions;

public class DuplicateEntityException extends RuntimeException {
    public DuplicateEntityException(String message) { super(message); }
}
